--- a/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
@@ -186,6 +186,7 @@ joblog_clean_type_unvalid=清理類型參数異常
 joblog_handleCode_200=成功
 joblog_handleCode_500=失敗
 joblog_handleCode_502=失敗(超時)
+joblog_handleCode_dubbo=Dubbo方法調用，默認調度成功即爲處理成功
 joblog_kill_log=终止任務
 joblog_kill_log_limit=調度失敗，無法终止日誌
 joblog_kill_log_byman=人為操作，主動終止
