--- a/xxl-job-admin/src/main/resources/i18n/message_zh_CN.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_zh_CN.properties
@@ -186,6 +186,7 @@ joblog_clean_type_unvalid=清理类型参数异常
 joblog_handleCode_200=成功
 joblog_handleCode_500=失败
 joblog_handleCode_502=失败(超时)
+joblog_handleCode_dubbo=Dubbo方法调用，默认调度成功即为处理成功
 joblog_kill_log=终止任务
 joblog_kill_log_limit=调度失败，无法终止日志
 joblog_kill_log_byman=人为操作，主动终止
